# gba-emu

./: .gitignore  Cargo.toml  README.md  index.html  package-lock.json  package.json  vite.config.ts
.claude/: launch.json
.github/workflows/: release.yml
core/: Cargo.toml
core/examples/: render_rom.rs  render_scene.rs
core/src/: apu.rs  bios.rs  dma.rs  io.rs  lib.rs  memory.rs  ppu.rs  save.rs  system.rs  timers.rs  timing.rs
core/src/cpu/: arm.rs  mod.rs  thumb.rs
core/tests/: apu_test.rs  bus_test.rs  cpu_test.rs  ppu_test.rs  system_test.rs
docs/: accuracy.md
docs/design/: 2026-07-18-controls-config-plan.md  2026-07-18-tauri-desktop-shell-design.md  2026-07-18-tauri-desktop-shell-plan.md
docs/screenshots/: README.md
docs/superpowers/plans/: 2026-07-18-controls-config.md
docs/superpowers/specs/: 2026-07-18-controls-config-design.md
src/: App.tsx  index.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: lib.rs  main.rs
src/components/: Console.tsx  ControlsSettings.tsx  GameCard.tsx  GbaConsole.tsx  Landing.tsx  Library.tsx  Settings.tsx  Sidebar.tsx  icons.tsx
src/lib/: audio.ts  controls.ts  desktop.ts  gamedb.ts  gba.ts  input.ts  library.ts  persist.ts
web/: Cargo.toml
web/src/: lib.rs
